--- a/acdj/templates/acdj/index.html
+++ b/acdj/templates/acdj/index.html
@@ -12,17 +12,7 @@
 
     <div class="main-div">
         <div class="inner-div">
-            <div id="sucursal-container" class="sucursal-container">
-                <!-- {% if sucursales %}
-                {% for sucursal in sucursales %}
-                <input data-sucursal-name="{{ sucursal.name }}" type="radio" id="sucursal-{{sucursal.id}}" name="sucursal" value="sucursal-{{sucursal.id}}">
-                <label for="sucursal-{{sucursal.id}}">{{sucursal.name}}</label>
-                <br>
-                {% endfor %}
-                {% else %}
-                <p>No sucursales are available.</p>
-                {% endif %} -->
-            </div>
+            <div id="sucursal-container" class="sucursal-container"></div>
 
             <div id="brand-container" class="brand-container"></div>
 
