--- a/acdj/templates/acdj/index.html
+++ b/acdj/templates/acdj/index.html
@@ -21,7 +21,8 @@
         <div id="accessory-container" class="accessory-container"></div>
     </div>
 
-    <button class="btn-output" id="btn-output">GENERATE MESSAGE</button>
+    <button class="btn-output" id="btn-output">COMPRA</button>
+    <button class="btn-output-presupuesto" id="btn-output-presupuesto">PRESUPUESTO</button>
     <p class="output" id="output"></p>
 
     {{ sucursales|json_script:"sucursal-json" }}
