HTML button PRESUPUESTO to PRESUP

--- a/acdj/templates/acdj/index.html
+++ b/acdj/templates/acdj/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <button class="btn-output" id="btn-output">COMPRA</button>
-    <button class="btn-output-presupuesto" id="btn-output-presupuesto">PRESUPUESTO</button>
+    <button class="btn-output-presupuesto" id="btn-output-presupuesto">PRESUP</button>
     <p class="output" id="output"></p>
 
     {{ sucursales|json_script:"sucursal-json" }}
