--- a/acdj/templates/acdj/index.html
+++ b/acdj/templates/acdj/index.html
@@ -22,7 +22,9 @@
     </div>
 
     <button class="btn-output" id="btn-output">COMPRA</button>
+    <button class="btn-output-off" id="btn-output-off">-10%</button>
     <button class="btn-output-presupuesto" id="btn-output-presupuesto">PRESUP</button>
+    <button class="btn-output-presupuesto-off" id="btn-output-presupuesto-off">-10%</button>
     <p class="output" id="output"></p>
 
     {{ sucursales|json_script:"sucursal-json" }}
