--- a/acdj/static/styles.css
+++ b/acdj/static/styles.css
@@ -84,11 +84,12 @@ label:hover {
 
 .btn-output-off {
     color: rgb(52, 72, 12);
-    background-color: rgb(142, 162, 102);
+    background-color: rgb(162, 182, 122);
 }
 
 .btn-output-presupuesto {
-    background-color: rgb(100, 100, 0);
+    color: rgb(250, 250, 250);
+    background-color: rgb(160, 160, 0);
 }
 
 .btn-output-presupuesto-off {
