--- a/acdj/templates/acdj/index.html
+++ b/acdj/templates/acdj/index.html
@@ -21,11 +21,13 @@
         <div id="accessory-container" class="accessory-container"></div>
     </div>
 
-    <button class="btn-output" id="btn-output">COMPRA</button>
-    <button class="btn-output-off" id="btn-output-off">-10%</button>
-    <button class="btn-output-presupuesto" id="btn-output-presupuesto">PRESUP</button>
-    <button class="btn-output-presupuesto-off" id="btn-output-presupuesto-off">-10%</button>
-    <p class="output" id="output"></p>
+    <div class="btn-container" id="btn-container">
+        <p class="output" id="output"></p>
+        <button class="btn-output" id="btn-output">COMPRA</button>
+        <button class="btn-output-off" id="btn-output-off">-10%</button>
+        <button class="btn-output-presupuesto" id="btn-output-presupuesto">PRESUP</button>
+        <button class="btn-output-presupuesto-off" id="btn-output-presupuesto-off">-10%</button>
+    </div>
 
     {{ sucursales|json_script:"sucursal-json" }}
     {{ carbrands|json_script:"carbrand-json" }}
