--- a/acdj/static/styles.css
+++ b/acdj/static/styles.css
@@ -32,12 +32,14 @@ html {
     background-color: var(--color1);
     /* background-color: white; */
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: x-large;
+    font-size: 1.4rem;
+    /* font-size: x-large; */
     color: rgb(200, 200, 200);
 }
 
 .main-div {
-    padding: .5rem .5rem 1rem 1rem;
+    padding: .5rem;
+    paddin-left: .1rem
 }
 
 input {
