--- a/acdj/static/styles.css
+++ b/acdj/static/styles.css
@@ -148,7 +148,7 @@ label:hover {
 }
 
 p {
-    font-size: large;
+    font-size: 1rem;
     padding: 1rem;
     padding-left: 2rem;
     padding-bottom: .5rem;
