HTML Msg for user V2

--- a/acdj/templates/acdj/index.html
+++ b/acdj/templates/acdj/index.html
@@ -31,7 +31,7 @@
         <button class="btn-output-presupuesto-off" id="btn-output-presupuesto-off">-10%</button>
     </div>
 
-    <p class="mensaje-usuario" id="mensaje-usuario">Ahora el mensaje se copia automáticamente al ser generado, por eso ya no hay un botón COPIAR.</p>
+    <p class="mensaje-usuario" id="mensaje-usuario">Ahora al clickear el botón COMPRA (o cualquiera de los otros) el mensaje se está copiando automáticamente.</p>
 
     {{ sucursales|json_script:"sucursal-json" }}
     {{ carbrands|json_script:"carbrand-json" }}
