HTML CSS JS Adding TOTAL btn

--- a/acdj/templates/acdj/index.html
+++ b/acdj/templates/acdj/index.html
@@ -29,6 +29,8 @@
         <button class="btn-output-off" id="btn-output-off">-10%</button>
         <button class="btn-output-presupuesto" id="btn-output-presupuesto">PRESUP</button>
         <button class="btn-output-presupuesto-off" id="btn-output-presupuesto-off">-10%</button>
+        <button class="btn-output-total" id="btn-output-total">TOTAL</button>
+        <button class="btn-output-total-off" id="btn-output-total-off">-10%</button>
     </div>
 
     <p class="mensaje-usuario" id="mensaje-usuario">Ahora al clickear el botón COMPRA (o cualquiera de los otros) el mensaje se está copiando automáticamente.</p>
