--- a/acdj/static/styles.css
+++ b/acdj/static/styles.css
@@ -92,7 +92,8 @@ label:hover {
 .btn-output-off,
 .btn-output-presupuesto,
 .btn-output-presupuesto-off,
-.btn-copy,
+.btn-output-total,
+.btn-output-total-off,
 .btn-clear {
     padding: .5rem;
     border-radius: .5rem;
@@ -124,15 +125,27 @@ label:hover {
     /* left: 12.6rem; */
 }
 
-.btn-copy {
-    margin-left: 1rem;
+.btn-output-total {
+    /* margin-left: 1rem; */
     background-color: rgb(65, 95, 112);
-    transition: .5s;
 }
+
+.btn-output-total-off {
+    color: rgb(45, 66, 78);
+    background-color: rgb(136, 165, 182);
+}
+
 
 .btn-clear {
     margin-left: .25rem;
     background-color: rgba(195, 62, 62, 0.5);
+}
+
+
+/* .btn-copy {
+    margin-left: 1rem;
+    background-color: rgb(65, 95, 112);
+    transition: .5s;
 }
 
 .btn-copied {
@@ -141,7 +154,7 @@ label:hover {
     border-radius: .5rem;
     color: rgb(29, 29, 29);
     margin-left: 1rem;
-}
+} */
 
 .output {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -154,7 +167,7 @@ label:hover {
 .mensaje-usuario {
     position: fixed;
     bottom: .7rem;
-    left: 25rem;
+    left: 32rem;
     padding: .35rem;
     border-radius: .5rem;
     background-color: rgb(119, 30, 30);
