CSS Bottom navbar version

--- a/acdj/templates/acdj/index.html
+++ b/acdj/templates/acdj/index.html
@@ -33,7 +33,7 @@
         <button class="btn-output-total-off" id="btn-output-total-off">-10%</button>
     </div>
 
-    <p class="mensaje-usuario" id="mensaje-usuario">Ahora al clickear el botón COMPRA (o cualquiera de los otros) el mensaje se está copiando automáticamente.</p>
+    <!-- <p class="mensaje-usuario" id="mensaje-usuario"></p> -->
 
     {{ sucursales|json_script:"sucursal-json" }}
     {{ carbrands|json_script:"carbrand-json" }}
