--- a/acdj/static/styles.css
+++ b/acdj/static/styles.css
@@ -73,6 +73,16 @@ label:hover {
     margin-bottom: .25rem;
 }
 
+.brand-container,
+.model-container,
+.payment-container {
+    display:none;
+}
+
+.payment-container {
+    margin-bottom: 7rem;
+}
+
 .accessory-container {
     padding: inherit;
     /* overflow: auto; */
@@ -81,10 +91,16 @@ label:hover {
 }
 
 .btn-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 0.2rem;
+    max-height: 7rem;
     background: linear-gradient(to top, var(--color1) 90%, rgba(35, 35, 35, 0));
-    width: 100%;
+    margin-left: 1rem;
     position: fixed;
     bottom: 0;
+    padding-top: 1rem;
     padding-bottom: .5rem;
 }
 
@@ -103,65 +119,73 @@ label:hover {
 }
 
 .btn-output {
-    margin-left: 2rem;
+    grid-column: 1;
+    grid-row: 1;
+    width: 5rem;
     background-color: rgb(72, 99, 32);
 }
 
 .btn-output-off {
+    grid-column: 2;
+    grid-row: 1;
+    width: 3rem;
     color: rgb(52, 72, 12);
     background-color: rgb(162, 182, 122);
     /* left: 5.7rem; */
 }
 
 .btn-output-presupuesto {
+    grid-column: 1;
+    grid-row: 2;
+    width: 5rem;
     color: rgb(250, 250, 250);
     background-color: rgb(160, 160, 0);
     /* left: 9rem; */
 }
 
 .btn-output-presupuesto-off {
+    grid-column: 2;
+    grid-row: 2;
+    width: 3rem;
     color: rgb(100, 100, 0);
     background-color: rgb(250, 250, 100);
     /* left: 12.6rem; */
 }
 
 .btn-output-total {
+    grid-column: 1;
+    grid-row: 3;
+    width: 5rem;
     /* margin-left: 1rem; */
     background-color: rgb(65, 95, 112);
 }
 
 .btn-output-total-off {
+    grid-column: 2;
+    grid-row: 3;
+    width: 3rem;
     color: rgb(45, 66, 78);
     background-color: rgb(136, 165, 182);
 }
 
 
 .btn-clear {
-    margin-left: .25rem;
-    background-color: rgba(195, 62, 62, 0.5);
+    grid-column: 3;
+    grid-row: 1/4;
+    width: 5rem;
+    background-color: rgb(195, 62, 62);
 }
 
-
-/* .btn-copy {
-    margin-left: 1rem;
-    background-color: rgb(65, 95, 112);
-    transition: .5s;
-}
-
-.btn-copied {
-    background-color: rgb(185, 215, 232);
-    padding: .5rem;
-    border-radius: .5rem;
-    color: rgb(29, 29, 29);
-    margin-left: 1rem;
-} */
 
 .output {
+    grid-column: 4;
+    grid-row: 1/4;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: .75rem;
-    padding: 1rem;
-    padding-left: 2rem;
-    padding-bottom: .5rem;
+    width: 70rem;
+    padding-left: 1rem;
+    /* padding: 1rem; */
+    /* padding-bottom: .5rem; */
 }
 
 .mensaje-usuario {
