--- a/acdj/static/styles.css
+++ b/acdj/static/styles.css
@@ -101,10 +101,10 @@ label:hover {
     gap: 0.2rem;
     max-height: 7rem;
     background: linear-gradient(to top, var(--color1) 90%, rgba(35, 35, 35, 0));
-    margin-right: 1rem;
+    /* margin-right: 1.5rem; */
     position: fixed;
     top: 0;
-    right: 0;
+    right: 1.5rem;
     padding-top: 1rem;
     padding-bottom: .5rem;
 }
