--- a/acdj/static/styles.css
+++ b/acdj/static/styles.css
@@ -35,8 +35,9 @@ html {
     color: rgb(200, 200, 200);
 }
 
-.main-div {
-    padding: .5rem;
+.main-grid {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
 }
 
 input {
@@ -47,19 +48,16 @@ label {
     padding-left: .3rem;
 }
 
-.main-div {
-    display: flex;
-}
-
-.inner-div {
-
-    position: fixed;
-
+.main-container {
+    grid-column: 1;
+    position: sticky;
+    top: 0;
+    height: 10rem;
+    padding: .5rem;
     display: flex;
     flex-direction: column;
-    width: 15%;
-    padding: inherit;
-    /* border-right: 1px solid rgb(212, 212, 212); */
+    box-sizing: border-box;
+    width: 100%;
 }
 
 label {
@@ -92,31 +90,24 @@ label:hover {
     display: none;
 }
 
-.payment-container {
-    margin-bottom: 7rem;
-}
-
 .accessory-container {
-
-    padding: inherit;
-    width: 56rem;
+    grid-column: 2/3;
+    padding: .5rem;
+    width: auto;
     border-radius: .5rem;
-    margin: .5rem .5rem .5rem 14rem;
+    margin: .5rem;
 }
 
 .btn-container {
+    grid-column: 3;
+    position: sticky;
+    top: 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 0.2rem;
-    max-height: 7rem;
-    background: linear-gradient(to top, var(--color1) 90%, rgba(35, 35, 35, 0));
-    /* margin-right: 1.5rem; */
-    position: fixed;
-    top: 0;
-    right: 1.5rem;
-    padding-top: 1rem;
-    padding-bottom: .5rem;
+    height: 10rem;
+    padding: .5rem;
 }
 
 .btn-output,
@@ -129,56 +120,44 @@ label:hover {
     padding: .5rem;
     border-radius: .5rem;
     color: rgb(212, 212, 212);
-    /* position: fixed; */
-    /* bottom: .5rem; */
 }
 
 .btn-output {
     grid-column: 1;
     grid-row: 1;
-    width: 5rem;
     background-color: rgb(72, 99, 32);
 }
 
 .btn-output-off {
     grid-column: 2;
     grid-row: 1;
-    /* width: 3rem; */
     color: rgb(52, 72, 12);
     background-color: rgb(162, 182, 122);
-    /* left: 5.7rem; */
 }
 
 .btn-output-presupuesto {
     grid-column: 1;
     grid-row: 2;
-    width: 5rem;
     color: rgb(250, 250, 250);
     background-color: rgb(160, 160, 0);
-    /* left: 9rem; */
 }
 
 .btn-output-presupuesto-off {
     grid-column: 2;
     grid-row: 2;
-    /* width: 3rem; */
     color: rgb(100, 100, 0);
     background-color: rgb(250, 250, 100);
-    /* left: 12.6rem; */
 }
 
 .btn-output-total {
     grid-column: 1;
     grid-row: 3;
-    width: 5rem;
-    /* margin-left: 1rem; */
     background-color: rgb(65, 95, 112);
 }
 
 .btn-output-total-off {
     grid-column: 2;
     grid-row: 3;
-    /* width: 3rem; */
     color: rgb(45, 66, 78);
     background-color: rgb(136, 165, 182);
 }
@@ -187,7 +166,6 @@ label:hover {
 .btn-clear {
     grid-column: 1/3;
     grid-row: 4;
-    /* width: 5rem; */
     background-color: rgb(195, 62, 62);
 }
 
@@ -195,7 +173,6 @@ label:hover {
 .output {
 
     display: none;
-
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: .75rem;
     position: fixed;
@@ -215,123 +192,8 @@ label:hover {
     background-color: rgb(119, 30, 30);
 }
 
-@media only screen and (max-width: 800px) {
-
-    html {
-        font-size: small;
+@media (max-width: 1200px) {
+    .main-grid {
+        grid-template-columns: 1fr 3fr 1fr;
     }
-
-    div {
-        padding: .5rem;
-    }
-
-    .main-div {
-        flex-direction: column;
-    }
-
-    .inner-div {
-        display: grid;
-        grid-template-columns: 3, 1fr;
-        /* grid-auto-rows: minmax(100px, auto); */
-        width: 100%;
-        border-right: none;
-        border-bottom: none;
-    }
-
-    .sucursal-container {
-        grid-column: 1;
-        grid-row: 1;
-    }
-
-    .brand-container {
-        grid-column: 2;
-        grid-row: 1;
-    }
-
-    .model-container {
-        grid-column: 3;
-        grid-row: 1;
-    }
-
-    .accessory-container {
-        grid-column: 1/3;
-        grid-row: 2;
-        border-bottom: none;
-    }
-
-    .btn-output,
-    .btn-output-off,
-    .btn-output-presupuesto,
-    .btn-output-presupuesto-off,
-    .btn-copy,
-    .btn-clear,
-    .btn-copied {
-        font-size: 0px;
-        position: absolute;
-    }
-
-    .btn-output:after {
-        content: "COMPRA";
-    }
-
-    .btn-output-off:after {
-        content: "-10%";
-    }
-
-    .btn-output-presupuesto:after {
-        content: "PRESUP";
-    }
-
-    .btn-output-presupuesto-off:after {
-        content: "-10%";
-    }
-
-    .btn-copy:after {
-        content: "COPIAR";
-    }
-
-    .btn-clear:after {
-        content: "BORRAR";
-    }
-
-    .btn-copied:after {
-        content: "COPIAR";
-    }
-
-    .btn-output:after,
-    .btn-output-off:after,
-    .btn-output-presupuesto:after,
-    .btn-output-presupuesto-off:after,
-    .btn-copy:after,
-    .btn-clear:after,
-    .btn-copied:after {
-        font-size: small;
-    }
-
-    .btn-copy {
-        margin-left: 2rem;
-    }
-
-}
-
-
-@media (min-width: 1600px) {
-    html {
-        font-size: x-large;
-    }
-
-    .accessory-container {
-        width: 60%;
-        margin-left: 14rem;
-    }
-
-}
-
-@media (min-width: 1366px) and (max-width: 1600px) {
-
-    .accessory-container {
-        width: 68%;
-        margin-left: 16rem;
-    }
-
 }
