--- a/acdj/static/styles.css
+++ b/acdj/static/styles.css
@@ -192,8 +192,43 @@ label:hover {
     background-color: rgb(119, 30, 30);
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1366px) {
+    
+    label {
+        width: 70%;
+    }
+    
     .main-grid {
-        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-columns: 1fr 4fr 1fr;
+    }
+}
+
+@media (max-width: 800px) {
+
+    html {
+        font-size: x-small;
+    }
+
+    label {
+        width: 50%;
+    }
+
+    .main-grid {
+        grid-template-columns: 3fr 6fr 1fr;
+    }
+}
+
+@media (max-width: 600px) {
+
+    html {
+        font-size: xx-small;
+    }
+
+    label {
+        width: 50%;
+    }
+
+    .main-grid {
+        grid-template-columns: 2fr 4fr 1fr;
     }
 }
